<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_SortbyP">Sort by: Popularity</string>
    <string name="action_SortbyR">Sort by: Rating</string>
    <string name="title_activity_detal_view">DetalView</string>
    <string name="release">Release Date: </string>
    <string name="review">Reviews</string>
    <string name="Title">Title</string>
    <string name="overview">OVERVIEW -</string>
    <string name="vote">VOTES :   </string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="button2">Mark AS\n FAvorite</string>
    <string name="fav">Favorite</string>
    <string name="title_activity_fav">Favorite</string>
    <string name="title_activity_fdetail">Fdetail</string>
    <string name="action_share">Share</string>
    <string name="here">Click here for reviews</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
