<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Title"
            android:id="@+id/title"

            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/title"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/ll1"

            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:id="@+id/button2"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.59"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/release"
            android:id="@+id/textView"
            android:textColor="@color/navigationBarColor"
            android:layout_below="@+id/ll1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Title"
            android:layout_below="@+id/textView"
            android:id="@+id/textView2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/overview"
            android:textColor="@color/navigationBarColor"
            android:layout_marginTop="@dimen/mar"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView2"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vote"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="@dimen/mar"
            android:textColor="@color/navigationBarColor"
            android:id="@+id/textView6"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vote"
            android:layout_below="@+id/textView6"

            android:id="@+id/textView5"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/here"
            android:id="@+id/button"
            android:layout_below="@+id/textView5"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:minHeight="?android:listPreferredItemHeight"
            android:layout_below="@+id/button"
            android:layout_height="@dimen/listview">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView"

                />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>
