<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context="com.example.nimitagg.popularmovies.DetalView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/title"

        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/Image"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/release"
        android:id="@+id/textView"
        android:textColor="@color/navigationBarColor"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Title"
        android:id="@+id/textView2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/overview"
        android:textColor="@color/navigationBarColor"
        android:layout_marginTop="@dimen/mar"
        android:id="@+id/textView4"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:id="@+id/textView3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vote"
        android:layout_marginTop="@dimen/mar"
        android:textColor="@color/navigationBarColor"
        android:id="@+id/textView6"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vote"

        android:id="@+id/textView5"
    />


</LinearLayout>

    </ScrollView>
